<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/option_home"
        android:title="@string/option_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/option_products"
        android:title="@string/option_products"
        app:showAsAction="never" />

    <item
        android:id="@+id/option_search"
        android:title="@string/option_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/option_settings"
        android:title="@string/option_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/option_logout"
        android:title="@string/option_logout"
        app:showAsAction="never" />

</menu>