<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <TextView
       android:id="@+id/tvAbout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
       android:layout_marginEnd="8dp"
       android:text="@string/tvAbout"
       android:textAlignment="center"
       android:textColor="#020202"
       android:textSize="20sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.142" />

   <TextView
       android:id="@+id/tvAbout2"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
       android:layout_marginTop="40dp"
       android:layout_marginEnd="8dp"
       android:text="@string/tvAbout2"
       android:textAlignment="center"
       android:textColor="#020202"
       android:textSize="20sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/tvAbout"
       app:layout_constraintVertical_bias="0.0" />

   <TextView
       android:id="@+id/tvAbout3"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
       android:layout_marginTop="32dp"
       android:layout_marginEnd="8dp"
       android:text="@string/tvAbout3"
       android:textAlignment="center"
       android:textColor="#020202"
       android:textSize="20sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/tvAbout2"
       app:layout_constraintVertical_bias="0.0" />

   <ImageView
       android:id="@+id/iv_rating"
       android:layout_width="396dp"
       android:layout_height="105dp"
       android:layout_marginStart="8dp"
       android:layout_marginTop="32dp"
       android:layout_marginEnd="8dp"
       android:src="@drawable/rating"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/tvAbout3" />

   <TextView
       android:id="@+id/tvAbout4"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
       android:layout_marginTop="16dp"
       android:layout_marginEnd="8dp"
       android:text="@string/tvAbout4"
       android:textAlignment="center"
       android:textColor="#020202"
       android:textSize="20sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/iv_rating"
       app:layout_constraintVertical_bias="0.0" />

   <TextView
       android:id="@+id/tvContact"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
       android:layout_marginTop="32dp"
       android:layout_marginEnd="8dp"
       android:text="@string/tvContact"
       android:textAlignment="viewStart"
       android:textColor="#020202"
       android:textSize="15sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/tvAbout4"
       app:layout_constraintVertical_bias="0.0" />

   <TextView
       android:id="@+id/tvContactEmail"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
       android:layout_marginEnd="8dp"
       android:layout_marginTop="8dp"
       android:text="@string/tvContactEmail"
       android:textAlignment="viewStart"
       android:textColor="#020202"
       android:textSize="15sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/tvContact"
       app:layout_constraintVertical_bias="0.0" />

   <TextView
       android:id="@+id/tvContactPhone"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
       android:layout_marginEnd="8dp"
       android:layout_marginTop="8dp"
       android:text="@string/tvContactPhone"
       android:textAlignment="viewStart"
       android:textColor="#020202"
       android:textSize="15sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/tvContactEmail"
       app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>